<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/app_name"
        style="@style/HeadTextLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/app_home"
        style="@style/HeadTextLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_home" />

    <TextView
        android:id="@+id/motivation"
        style="@style/HeadTextLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/motivation" />

    <TextView
        android:id="@+id/aahuti"
        style="@style/AnswerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aahuti" />

    <TextView
        android:id="@+id/developer"
        style="@style/HeadTextLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/developer" />

    <TextView
        android:id="@+id/shikhar"
        style="@style/AnswerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shikhar"
        android:visibility="visible" />

</LinearLayout>