<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <TextView
            style="@style/HeadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#2f6699"
            android:paddingTop="10dp" />

        <TextView
            style="@style/AnswerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Core Options" />

        <Button
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/snpdf_button"
            android:gravity="center"
            android:onClick="scan"
            android:text="@string/select_scanner" />

        <Button
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/snpdf_button"
            android:gravity="center"
            android:onClick="convertImage"
            android:text="@string/select_imageconvert" />

        <Button
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/snpdf_button"
            android:gravity="center"
            android:onClick="lockPDF"
            android:text="@string/select_lockpdf" />

        <Button
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/snpdf_button"
            android:gravity="center"
            android:onClick="concatenatePDF"
            android:text="@string/concatenate_pdf" />

        <Button
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/snpdf_button"
            android:gravity="center"
            android:onClick="extractPDF"
            android:text="@string/extract_pdf" />

        <Button
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/snpdf_button"
            android:gravity="center"
            android:onClick="convertTXTFile"
            android:text="@string/select_txtconvert" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#2f6699"
            android:paddingTop="10dp" />

        <TextView
            style="@style/AnswerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Non-Core Options" />

        <Button
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/snpdf_button"
            android:gravity="center"
            android:onClick="convertHTMLFile"
            android:text="@string/select_htmlconvert" />
        
        <Button
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/snpdf_button"
            android:gravity="center"
            android:onClick="pdfToText"
            android:text="@string/select_pdfToText" />
    </LinearLayout>

</ScrollView>