<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PickStringActivity" >

    <View style="@style/gap" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:selectAllOnFocus="true" />

    <View style="@style/gap" />

    <View style="@style/gap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            style="@style/PopButtonText"
            android:layout_weight="1"
            android:background="@drawable/snpdf_button"
            android:onClick="passName"
            android:text="@string/ok" />

        <Button
            android:id="@+id/button2"
            style="@style/PopButtonText"
            android:layout_weight="1"
            android:background="@drawable/snpdf_button"
            android:onClick="cancel"
            android:text="@string/cancel" />
    </LinearLayout>

    <View style="@style/gap" />

</LinearLayout>