<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adUnitId"
        ads:loadAdOnCreate="true"
        ads:testDevices="TEST_EMULATOR, 714028AE5C3B8CEEE2D9995406974941" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:orientation="vertical"
        tools:context=".ProtectPDFActivity" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ProtectPDFActivity" >

            <TextView
                style="@style/IntroText"
                android:text="@string/intro_protect" />

            <View style="@style/line" />

            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                style="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/pdf_file"
                    style="@style/AnswerText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="Select PDF to protect" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/find"
                    android:onClick="pickFile" />
            </LinearLayout>

            <View style="@style/gap" />

            <EditText
                android:id="@+id/password"
                style="@style/AnswerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword" >
            </EditText>

            <EditText
                android:id="@+id/confirm_password"
                style="@style/AnswerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <View style="@style/gap" />

            <View style="@style/gap" />

            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                style="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button1"
                    style="@style/ButtonText"
                    android:layout_weight="1"
                    android:background="@drawable/snpdf_button"
                    android:onClick="protect"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="protect" />

                <View style="@style/gap_horizontal" />

                <Button
                    android:id="@+id/button2"
                    style="@style/ButtonText"
                    android:layout_weight="1"
                    android:background="@drawable/snpdf_button"
                    android:onClick="cancel"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/cancel" />
            </LinearLayout>

            <View style="@style/gap" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>