<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adUnitId"
        ads:loadAdOnCreate="true"
        ads:testDevices="TEST_EMULATOR, 714028AE5C3B8CEEE2D9995406974941" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:orientation="vertical"
        tools:context=".SplitActivity" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".SplitActivity" >

            <TextView
                style="@style/IntroText"
                android:text="@string/intro_split" />

            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                style="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/pdf_file"
                    style="@style/AnswerText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="Select the PDF to split" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/find"
                    android:onClick="pickFile" />
            </LinearLayout>

            <EditText
                android:id="@+id/password"
                style="@style/AnswerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword" >
            </EditText>

            <View style="@style/gap" />

            <View style="@style/gap" />

            <Button
                android:id="@+id/page_detail_button"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/snpdf_button"
                android:onClick="fillPageDetails"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:text="get-page-details" />

            <View style="@style/gap" />

            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/page_detail_layout"
                style="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/message"
                    style="@style/AnswerText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <View style="@style/gap" />

                <EditText
                    android:id="@+id/from_number"
                    style="@style/AnswerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_frompgnumber"
                    android:inputType="number" >
                </EditText>

                <EditText
                    android:id="@+id/to_number"
                    style="@style/AnswerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_topgnumber"
                    android:inputType="number" >
                </EditText>
            </LinearLayout>

            <View style="@style/gap" />

            <View style="@style/gap" />

            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                style="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button1"
                    style="@style/ButtonText"
                    android:layout_weight="1"
                    android:background="@drawable/snpdf_button"
                    android:onClick="split"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="split" />

                <View style="@style/gap_horizontal" />

                <Button
                    android:id="@+id/button2"
                    style="@style/ButtonText"
                    android:layout_weight="1"
                    android:background="@drawable/snpdf_button"
                    android:onClick="cancel"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/cancel" />
            </LinearLayout>

            <View style="@style/gap" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>